Fix list overflow and convert material on design-system layout to sparkle based

--- a/projects/sparkle-ui/styles/components/sparkle-list.component.scss
+++ b/projects/sparkle-ui/styles/components/sparkle-list.component.scss
@@ -12,7 +12,6 @@ $sparkleList: false !default;
     gap: p2r(8);
     display: flex;
     flex-direction: column;
-    overflow: hidden;
 
     &.base-level-20 {
       --list-active-bg: var(--base-level-10);
